app/lib/ffi/ct_bindings.g.dart

// Generated by ffigen from core/include/crosstransfer/ct_api.h. Do not edit.
// ignore_for_file: type=lint

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import, unused_element, deprecated_member_use_from_same_package
import 'dart:ffi' as ffi;

/// Dart FFI bindings for crosstransfer_native (core/include/crosstransfer/ct_api.h).
class CtBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  CtBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  CtBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Create a core instance.
  ///
  /// config_json (all keys optional unless noted):
  /// {
  /// "data_dir": "...",          // required: config.json, transfers.json
  /// "log_dir": "...",           // default <data_dir>/logs
  /// "log_level": "info",        // trace|debug|info|warn|error
  /// "server": {"host": "...", "port": 443, "tls": true, "path": "/ws"},
  /// "link_host": "example.com", // host used in https://<link_host>/r/<code>
  /// "turn_mode": "auto",        // auto|force|off
  /// "ws_relay": "auto",         // auto|force|off
  /// "enable_srtp": true,
  /// "enable_upnp": false,
  /// "save_dir": "...",          // default receive directory
  /// "share": {"mode": "once", "ttl_sec": 600},
  /// "app_version": "0.1.0", "platform": "macos"
  /// }
  /// Values persist to <data_dir>/config.json and are merged over saved ones.
  ffi.Pointer<CtCore> CtCreate(ffi.Pointer<ffi.Char> config_json) {
    return _CtCreate(config_json);
  }

  late final _CtCreatePtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<CtCore> Function(ffi.Pointer<ffi.Char>)>
      >('CtCreate');
  late final _CtCreate =
      _CtCreatePtr.asFunction<
        ffi.Pointer<CtCore> Function(ffi.Pointer<ffi.Char>)
      >();

  void CtDestroy(ffi.Pointer<CtCore> core) {
    return _CtDestroy(core);
  }

  late final _CtDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<CtCore>)>>(
        'CtDestroy',
      );
  late final _CtDestroy =
      _CtDestroyPtr.asFunction<void Function(ffi.Pointer<CtCore>)>();

  void CtFreeString(ffi.Pointer<ffi.Char> s) {
    return _CtFreeString(s);
  }

  late final _CtFreeStringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'CtFreeString',
      );
  late final _CtFreeString =
      _CtFreeStringPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Snapshot query. query_json: {"what": "shares"|"receives"|"transfers"|"config"|"all"}.
  /// Returns a malloc'd JSON string (free with CtFreeString) or NULL.
  ffi.Pointer<ffi.Char> CtQuery(
    ffi.Pointer<CtCore> core,
    ffi.Pointer<ffi.Char> query_json,
  ) {
    return _CtQuery(core, query_json);
  }

  late final _CtQueryPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<CtCore>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('CtQuery');
  late final _CtQuery =
      _CtQueryPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<CtCore>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Resume an unfinished receive listed by CtQuery {"what":"transfers"}.
  int CtReceiveResume(
    ffi.Pointer<CtCore> core,
    ffi.Pointer<ffi.Char> transfer_id,
  ) {
    return _CtReceiveResume(core, transfer_id);
  }

  late final _CtReceiveResumePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<CtCore>, ffi.Pointer<ffi.Char>)
        >
      >('CtReceiveResume');
  late final _CtReceiveResume =
      _CtReceiveResumePtr.asFunction<
        int Function(ffi.Pointer<CtCore>, ffi.Pointer<ffi.Char>)
      >();

  /// Claim a take-code (any accepted spelling, or an https:// / crosstransfer://
  /// link) and receive into save_dir (NULL = configured default). If an
  /// unfinished transfer for the same code exists in transfers.json it resumes.
  /// out_transfer_id receives a malloc'd string or NULL.
  int CtReceiveStart(
    ffi.Pointer<CtCore> core,
    ffi.Pointer<ffi.Char> code_or_link,
    ffi.Pointer<ffi.Char> save_dir,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_transfer_id,
  ) {
    return _CtReceiveStart(core, code_or_link, save_dir, out_transfer_id);
  }

  late final _CtReceiveStartPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<CtCore>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('CtReceiveStart');
  late final _CtReceiveStart =
      _CtReceiveStartPtr.asFunction<
        int Function(
          ffi.Pointer<CtCore>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
        )
      >();

  void CtSetEventCallback(
    ffi.Pointer<CtCore> core,
    CtEventCallback cb,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _CtSetEventCallback(core, cb, user_data);
  }

  late final _CtSetEventCallbackPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<CtCore>,
            CtEventCallback,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('CtSetEventCallback');
  late final _CtSetEventCallback =
      _CtSetEventCallbackPtr.asFunction<
        void Function(
          ffi.Pointer<CtCore>,
          CtEventCallback,
          ffi.Pointer<ffi.Void>,
        )
      >();

  /// Same as CtSetEventCallback, but each event arrives as a malloc'd copy that
  /// outlives the call; the callback must release it with CtFreeString. Needed by
  /// asynchronous listeners (Dart NativeCallable.listener). Exported only by the
  /// crosstransfer_native shared library.
  void CtSetEventCallbackOwned(
    ffi.Pointer<CtCore> core,
    CtEventCallback cb,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _CtSetEventCallbackOwned(core, cb, user_data);
  }

  late final _CtSetEventCallbackOwnedPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<CtCore>,
            CtEventCallback,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('CtSetEventCallbackOwned');
  late final _CtSetEventCallbackOwned =
      _CtSetEventCallbackOwnedPtr.asFunction<
        void Function(
          ffi.Pointer<CtCore>,
          CtEventCallback,
          ffi.Pointer<ffi.Void>,
        )
      >();

  int CtShareClose(ffi.Pointer<CtCore> core, ffi.Pointer<ffi.Char> share_id) {
    return _CtShareClose(core, share_id);
  }

  late final _CtShareClosePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<CtCore>, ffi.Pointer<ffi.Char>)
        >
      >('CtShareClose');
  late final _CtShareClose =
      _CtShareClosePtr.asFunction<
        int Function(ffi.Pointer<CtCore>, ffi.Pointer<ffi.Char>)
      >();

  /// Create a share. paths_json: ["/abs/file", "/abs/dir", ...].
  /// options_json: {"mode": "once"|"open", "ttl_sec": 600} (optional).
  /// Emits share_state events; the returned id is available immediately.
  /// out_share_id receives a malloc'd string (free with CtFreeString) or NULL.
  int CtShareCreate(
    ffi.Pointer<CtCore> core,
    ffi.Pointer<ffi.Char> paths_json,
    ffi.Pointer<ffi.Char> options_json,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_share_id,
  ) {
    return _CtShareCreate(core, paths_json, options_json, out_share_id);
  }

  late final _CtShareCreatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<CtCore>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('CtShareCreate');
  late final _CtShareCreate =
      _CtShareCreatePtr.asFunction<
        int Function(
          ffi.Pointer<CtCore>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
        )
      >();

  int CtTransferCancel(
    ffi.Pointer<CtCore> core,
    ffi.Pointer<ffi.Char> transfer_id,
  ) {
    return _CtTransferCancel(core, transfer_id);
  }

  late final _CtTransferCancelPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<CtCore>, ffi.Pointer<ffi.Char>)
        >
      >('CtTransferCancel');
  late final _CtTransferCancel =
      _CtTransferCancelPtr.asFunction<
        int Function(ffi.Pointer<CtCore>, ffi.Pointer<ffi.Char>)
      >();

  int CtTransferPause(
    ffi.Pointer<CtCore> core,
    ffi.Pointer<ffi.Char> transfer_id,
  ) {
    return _CtTransferPause(core, transfer_id);
  }

  late final _CtTransferPausePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<CtCore>, ffi.Pointer<ffi.Char>)
        >
      >('CtTransferPause');
  late final _CtTransferPause =
      _CtTransferPausePtr.asFunction<
        int Function(ffi.Pointer<CtCore>, ffi.Pointer<ffi.Char>)
      >();

  int CtTransferResume(
    ffi.Pointer<CtCore> core,
    ffi.Pointer<ffi.Char> transfer_id,
  ) {
    return _CtTransferResume(core, transfer_id);
  }

  late final _CtTransferResumePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<CtCore>, ffi.Pointer<ffi.Char>)
        >
      >('CtTransferResume');
  late final _CtTransferResume =
      _CtTransferResumePtr.asFunction<
        int Function(ffi.Pointer<CtCore>, ffi.Pointer<ffi.Char>)
      >();

  /// Merge new values into the configuration (server change reconnects).
  int CtUpdateConfig(
    ffi.Pointer<CtCore> core,
    ffi.Pointer<ffi.Char> config_json,
  ) {
    return _CtUpdateConfig(core, config_json);
  }

  late final _CtUpdateConfigPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<CtCore>, ffi.Pointer<ffi.Char>)
        >
      >('CtUpdateConfig');
  late final _CtUpdateConfig =
      _CtUpdateConfigPtr.asFunction<
        int Function(ffi.Pointer<CtCore>, ffi.Pointer<ffi.Char>)
      >();

  ffi.Pointer<ffi.Char> CtVersion() {
    return _CtVersion();
  }

  late final _CtVersionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'CtVersion',
      );
  late final _CtVersion =
      _CtVersionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  late final addresses = _SymbolAddresses(this);
}

class _SymbolAddresses {
  final CtBindings _library;
  _SymbolAddresses(this._library);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>
  get CtFreeString => _library._CtFreeStringPtr;
}

final class CtCore extends ffi.Opaque {}

/// Event sink. `json_utf8` is valid only for the duration of the call.
typedef CtEventCallback =
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Char> json_utf8,
          ffi.Pointer<ffi.Void> user_data,
        )
      >
    >;

/// Return codes for Ct* calls. Asynchronous failures arrive as events.
sealed class CtStatus {
  static const CT_OK = 0;

  /// < NULL pointer, malformed JSON, bad code
  static const CT_ERR_INVALID_ARG = -1;

  /// < call not valid in the current state
  static const CT_ERR_STATE = -2;

  /// < unknown share / transfer id
  static const CT_ERR_NOT_FOUND = -3;

  /// < data dir / file access failure
  static const CT_ERR_IO = -4;
  static const CT_ERR_INTERNAL = -5;
}
